samples/_failures_safe/1761150417_ee8c12_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fe1dbe41.c: In function ‘main’:
./samples/SAFE/__tmp_fe1dbe41.c:127:13: error: expected expression at end of input
  127 |             printf("- %s\n",
      |             ^~~~~~
./samples/SAFE/__tmp_fe1dbe41.c:127:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fe1dbe41.c:127:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fe1dbe41.c:127:13: error: expected declaration or statement at end of input
